<resources>
    <string name="app_name">TaskPal</string>

    <string name="google_places_api_key">AIzaSyCiRYEdunD-7DEob4cO-VYFA9yiYulld4w</string>

    <string name="edit_string">Edit</string>
    <string name="delete_string">Delete</string>
    <string name="copy_string">Copy</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_string">Settings</string>

    <string name="pen_image">Pen Image</string>
    <string name="card_image">More Image</string>
    <string name="more_less">More/Less Image</string>

    <string name="add_task">Add Task</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="submit">Submit</string>
    <string name="ok">OK</string>
    <string name="delete_task">Delete Task?</string>
    <string name="cancel">Cancel</string>
    <string name="notifications">Notifications</string>
    <string name="tilte">Title: </string>
    <string name="description">Description: </string>
    <string name="address">Address: </string>
    <string name="api_key">BuildConfig.GOOGLE_PLACES_API_KEY</string>
    <string name="country">Country</string>

    <string-array name="countries_array">
        <item>Country</item>
        <item>Ireland</item>
        <item>United Kingdom</item>
        <item>Australia</item>
        <item>United States</item>
        <item>Canada</item>
    </string-array>
</resources>
