<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context="joshcarroll.projects.android.taskpal.fragment.EditTaskFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Task"
        android:textSize="20sp"
        android:textColor="@color/ColorNavy"
        android:layout_marginBottom="25dp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#16a085"
            android:labelFor="@+id/task_title_field"
            android:layout_toStartOf="@+id/clear_button_edit_title"
            android:hint="@string/title">

            <EditText
                android:inputType="textCapWords"
                android:textColor="#2c3e50"
                android:id="@+id/task_edit_title_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/clear_button_edit_title"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_alignParentEnd="true"
            android:background="@drawable/clear_button"
            android:layout_marginTop="16dp"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#16a085"
            android:labelFor="@+id/task_desc_field"
            android:layout_below="@+id/text_input_layout1"
            android:layout_toStartOf="@+id/clear_button_edit_desc"
            android:hint="@string/desc">

            <EditText
                android:textColor="#2c3e50"
                android:id="@+id/task_edit_desc_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/clear_button_edit_desc"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="70dp"
            android:background="@drawable/clear_button"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#16a085"
            android:labelFor="@+id/edit_task_address_field"
            android:layout_below="@+id/text_input_layout2"
            android:layout_toStartOf="@+id/clear_button_edit_title"
            android:hint="Address">

            <EditText
                android:textColor="#2c3e50"
                android:id="@+id/edit_task_address_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/clear_button_edit_address"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="125dp"
            android:background="@drawable/clear_button" />
    </RelativeLayout>

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_edited_task_button"
        android:text="@string/submit"
        android:background="@color/colorGreen"
        android:textColor="@color/colorWhite"
        />
</LinearLayout>
